Complementary test to assuer 85% of coverage